# Sailly-source-code

./: .cursorignore  .env.example  .env.secrets.example  .gitignore  ACTION_ITEMS.md  BEFORE_AFTER.md  BRAIN_DIVERGENCE_DIFF_WALK.md  BUILDER_FINDINGS.md  BUILDER_GAP_MATRIX.md  CALL_ANALYSIS_FULL_REPORT_demo-7bba699665ed.md  CALL_REPORT_GUIDE.md  CHANGES_REFERENCE.md  CHANGES_SUMMARY.txt  CLAUDE.md  CODEX_RUNBOOK.md  COMPREHENSIVE_TRACE_AND_ANALYSIS.md  CRITICAL_TIMELINE_CLARIFICATION_2026_04_23.md  DEBUGGER_API_ANALYSIS_SUMMARY.md  DEBUGGER_API_CORRECTED_TYPES.ts  DEBUGGER_API_RESPONSE_SCHEMAS.md  DEBUGGER_API_VERIFICATION_TESTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.txt  DOUBLE_CHECK_VERIFICATION_27MAY.md  EXECUTION_COMPLETE.md  FIXES_APPLIED_SESSION.md  FOCUSED_RERUN_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  INTEGRATION_TESTING_REPORT.md  KNOWN_ISSUES_STATUS_27MAY.md  LIVE_CALL_ANALYSIS_2026-04-19.md  MANIFEST.md  MICROPACK_REPORTS_INDEX.md  MICROPACK_SUMMARY.md  MICROPACK_VERIFICATION_BOTH_CALLS.md  PHASE_0B_FULL_COMPLETION.md  PHASE_4B_DELIVERABLES.md  PHASE_4B_REGRESSION_GATE.md  QUICK_REFERENCE.txt  (+23 more)
.ci/: regression_baseline.json  (+1 more)
test-infra/caller-bot-v4/: .gitignore  README.md  READY_FOR_SMOKE_RUN.txt  pyproject.toml  requirements.txt
test-infra/caller-bot-v4/prompts/: caller_system.de.txt
test-infra/caller-bot-v4/scenarios/: bugfix_date_cest.yaml  bugfix_greeting_fixed.yaml  bugfix_phone_no_leading_zero.yaml
test-infra/caller-bot-v4/src/: main.py  persona.py
test-infra/caller-bot-v4/tests/: test_verifier_rules.py
(+3650 files in other folders)
