[project]
name = "sailly-caller-bot-v4"
version = "0.1.0"
description = "LLM-driven caller simulator for Sailly v4 testing"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "websockets>=11.0",
    "asyncpg>=0.28.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
caller-bot-v4 = "src.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
